--- a/app/src/main/res/layout/activity_user_cases_display.xml
+++ b/app/src/main/res/layout/activity_user_cases_display.xml
@@ -27,23 +27,17 @@
                 android:layout_height="match_parent"
                 tools:ignore="UselessParent">
 
-
-                <ImageView
-                    android:id="@+id/iv_UCD_back"
-                    android:layout_width="55dp"
-                    android:layout_height="67dp"
-                    android:background="#99d0c8"
-                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
-
                 <TextView
                     android:id="@+id/tv_UCD_key"
                     android:layout_width="310dp"
-                    android:layout_height="67dp"
-                    android:layout_marginStart="20dp"
+                    android:layout_height="65dp"
                     android:text=" "
-                    android:textColor="#ffffff"
+                    android:textAlignment="center"
+                    android:layout_marginStart="30dp"
+                    android:textColor="#0c0c0c"
                     android:textSize="35dp"
                     android:textStyle="bold" />
+
             </LinearLayout>
 
 
@@ -51,9 +45,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Diet Plan"
+                android:text="STAY HOME ... STAY SAFE"
+                android:layout_marginBottom="140dp"
                 android:textAlignment="center"
-                android:textColor="#ffffff"
+                android:textColor="#244376"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
@@ -74,13 +69,14 @@
 
                 <TextView
                     android:id="@+id/tv_UCD_posCase"
-                    android:layout_width="133dp"
-                    android:layout_height="56dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_width="135dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginStart="20dp"
                     android:text="  "
-                    android:textColor="#fff"
+                    android:textColor="#0c0c0c"
                     android:textStyle="italic"
-                    android:textSize="20dp" />
+                    android:textSize="25dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -102,11 +98,12 @@
                     android:id="@+id/tv_UCD_reco"
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:text="  "
-                    android:textColor="#fff"
+                    android:textColor="#0c0c0c"
                     android:textStyle="italic"
-                    android:textSize="20dp" /> />
+                    android:textSize="25dp" /> />
             </LinearLayout>
 
             <LinearLayout
@@ -130,15 +127,13 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="20dp"
                     android:text="  "
                     android:textStyle="italic"
-                    android:textColor="#fff"
-                    android:textSize="20dp" />
+                    android:textColor="#0c0c0c"
+                    android:textSize="25dp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
