--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -16,61 +16,61 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:orientation="vertical"
-        android:padding="20dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:padding="20dp">
 
-        <Button
-            android:id="@+id/bt_admin_add"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="ADD"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <Button
+                android:id="@+id/bt_admin_add"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/sign_in_button"
+                android:padding="15dp"
+                android:text="ADD"
+                android:textColor="#fff"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        <Button
-            android:id="@+id/bt_admin_retrieve"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="RETRIEVE"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent" />
+            <Button
+                android:id="@+id/bt_admin_retrieve"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/sign_in_button"
+                android:padding="15dp"
+                android:text="ALL PATIENTS"
+                android:textColor="#fff"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/bt_admin_updiet"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="UPDATE DIET"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent" />
+            <Button
+                android:id="@+id/bt_admin_updiet"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/sign_in_button"
+                android:padding="15dp"
+                android:text="UPDATE DIET"
+                android:textColor="#fff"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/bt_admin_upcases"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/sign_in_button"
-            android:padding="15dp"
-            android:text="UPDATE CASES"
-            android:textColor="#fff"
-            app:layout_constraintStart_toStartOf="parent" />
+            <Button
+                android:id="@+id/bt_admin_upcases"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/sign_in_button"
+                android:padding="15dp"
+                android:text="UPDATE CASES"
+                android:textColor="#fff"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
