--- a/app/src/main/res/layout/activity_admin_edit_details.xml
+++ b/app/src/main/res/layout/activity_admin_edit_details.xml
@@ -29,7 +29,7 @@
                 android:text="Edit Patient Detials"
                 android:layout_marginTop="40dp"
                 android:textAlignment="center"
-                android:textColor="#ffffff"
+                android:textColor="#0c0c0c"
                 android:textSize="35dp"
                 android:textStyle="bold" />
 
@@ -43,18 +43,19 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="20dp"
                     android:text="Name :"
                     android:textColor="#fff"
                     android:textStyle="bold"
-                    android:textSize="20dp" />
+                    android:textSize="22dp" />
 
                 <EditText
                     android:id="@+id/et_AED_name"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
                     android:textSize="20dp"
-                    android:textColor="#fff" />
+                    android:textColor="#0c0c0c" />
             </LinearLayout>
 
             <LinearLayout
@@ -67,25 +68,26 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="20dp"
                     android:text="Result :"
                     android:textColor="#fff"
                     android:textStyle="bold"
-                    android:textSize="20dp" />
+                    android:textSize="22dp" />
 
                 <EditText
                     android:id="@+id/et_AED_status"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
                     android:textSize="20dp"
-                    android:textColor="#fff" />
+                    android:textColor="#0c0c0c" />
             </LinearLayout>
 
             <Button
                 android:id="@+id/bt_AED_update"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="60dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/sign_in_button"
                 android:padding="15dp"
