--- a/app/src/main/res/layout/activity_user_cases.xml
+++ b/app/src/main/res/layout/activity_user_cases.xml
@@ -28,18 +28,12 @@
                 android:layout_height="match_parent"
                 android:padding="20dp">
 
-
-                <ImageView
-                    android:id="@+id/iv_UC_back"
-                    android:layout_width="55dp"
-                    android:layout_height="67dp"
-                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
-
                 <TextView
                     android:layout_width="222dp"
                     android:layout_height="wrap_content"
                     android:text="STATES"
                     android:textAlignment="center"
+                    android:layout_margin="53dp"
                     android:textColor="#ffffff"
                     android:textSize="35dp"
                     android:textStyle="bold" />
@@ -58,8 +52,8 @@
             <Spinner
                 android:id="@+id/sp_state"
                 android:layout_marginTop="10dp"
-                android:layout_width="132dp"
-                android:layout_height="37dp"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center" />
 
             <Button
