--- a/app/src/main/res/layout/activity_user_diet_display.xml
+++ b/app/src/main/res/layout/activity_user_diet_display.xml
@@ -22,29 +22,23 @@
             android:orientation="vertical"
             android:padding="20dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:ignore="UselessParent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:ignore="UselessParent">
 
 
-            <ImageView
-                android:id="@+id/iv_UDDis_back"
-                android:layout_width="55dp"
-                android:layout_height="67dp"
-                android:background="#99d0c8"
-                app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />
-
-            <TextView
-                android:id="@+id/tv_UDDis_key"
-                android:layout_width="310dp"
-                android:layout_height="67dp"
-                android:layout_marginStart="20dp"
-                android:text=" "
-                android:textColor="#ffffff"
-                android:textSize="35dp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_UDDis_key"
+                    android:layout_width="310dp"
+                    android:layout_height="65dp"
+                    android:layout_marginStart="30dp"
+                    android:textAlignment="center"
+                    android:text="  "
+                    android:textColor="#ffffff"
+                    android:textSize="35dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
 
 
@@ -54,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:text="Diet Plan"
                 android:textAlignment="center"
-                android:textColor="#ffffff"
+                android:textColor="#0c0c0c"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
@@ -68,7 +62,7 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="20dp"
                     android:text="Breakfast : "
                     android:textColor="#fff"
                     android:textStyle="bold"
@@ -79,9 +73,10 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="30dp"
                     android:text=" "
-                    android:textColor="#fff"
-                    android:textSize="20dp" />
+                    android:textColor="#0c0c0c"
+                    android:textSize="25dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -94,7 +89,7 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="20dp"
                     android:text="Lunch        : "
                     android:textColor="#fff"
                     android:textStyle="bold"
@@ -105,9 +100,10 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="30dp"
                     android:text=" "
-                    android:textColor="#fff"
-                    android:textSize="20dp" /> />
+                    android:textColor="#0c0c0c"
+                    android:textSize="25dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -120,7 +116,7 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="20dp"
                     android:text="Snack        : "
                     android:textColor="#fff"
                     android:textStyle="bold"
@@ -131,9 +127,10 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="30dp"
                     android:text=" "
-                    android:textColor="#fff"
-                    android:textSize="20dp" />
+                    android:textColor="#0c0c0c"
+                    android:textSize="25dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -146,7 +143,7 @@
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="20dp"
                     android:text="Dinner       : "
                     android:textColor="#fff"
                     android:textStyle="bold"
@@ -157,9 +154,10 @@
                     android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginStart="30dp"
                     android:text=" "
-                    android:textColor="#fff"
-                    android:textSize="20dp" />
+                    android:textColor="#0c0c0c"
+                    android:textSize="25dp" />
             </LinearLayout>
 
         </LinearLayout>
